# esp32-c3-cntest

./: README.md
cnip_test/: CMakeLists.txt  partitions.csv  sdkconfig
cnip_test/components/cnhttp/: CMakeLists.txt  cnip_http.c  cnip_sha1.c  http_custom.c  mfs.c  networking.c
cnip_test/components/cnhttp/include/: cnip_http.h  cnip_http_config.h  mfs.h  networking.h
cnip_test/components/cnip/: CMakeLists.txt  README.md  attic.txt  cnip_core.c  cnip_dhcp.c  cnip_hal.c  cnip_mdns.c  cnip_netif.c  cnip_tcp.c  cnip_tftp.c  tcpip_adapter.c
cnip_test/components/cnip/include/: cnip_config.h  cnip_core.h  cnip_dhcp.h  cnip_hal.h  cnip_mdns.h  cnip_tcp.h  cnip_tftp.h  http_parser.h  netdb.h  smartconfig_ack.h  tcpip_adapter.h
cnip_test/components/cnip/include/dhcpserver/: dhcpserver.h
cnip_test/components/cnip/include/lwip/: err.h  ip6_addr.h  ip_addr.h  netif.h  sockets.h
cnip_test/components/cnip/include/sys/: socket.h
cnip_test/components/tcpip_adapter/: tcpip_adapter_compat.c
cnip_test/components/tcpip_adapter/include/: tcpip_adapter.h  tcpip_adapter_types.h
cnip_test/main/: CMakeLists.txt  main.c
cnip_test/web/: Makefile  component.mk  mfsmaker  page.mfs  pushscript.txt
cnip_test/web/page/: example.js  index.html
cnip_test/web/tmp/: index.html
gpio_perf_test/: sdkconfig  sdkconfig.old
gpio_perf_test/main/: CMakeLists.txt  assembly_code.S  gpio_perf_test.c
i2s_perf_test/: make_list.sh  sdkconfig
i2s_perf_test/main/: CMakeLists.txt  asm_helpers.S  i2s_perf_test.c
